apps/bitwarden/bitwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      volumes:
        - name: bitwarden
          persistentVolumeClaim:
            claimName: bitwarden-pvc
      containers:
        - name: bitwarden
          image: vaultwarden/server:1.28.1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: bitwarden
              mountPath: /data
