apps/bitwarden/bitwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
