apps/bitwarden/bitwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  tls:
    - secretName: bitwarden-cert
      hosts:
        - bitwarden.unifiedconsulting.net
  rules:
    - host: bitwarden.unifiedconsulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  number: 80
